--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -3,20 +3,28 @@
     //     font-size: 32px;
     // }
 
-    h2 {
+    h2,
+    .h2 {
         font-size: 32px;
     }
 
-    h3 {
+    h3,
+    .h3 {
         font-size: 24px;
     }
 
-    h5 {
+    h5,
+    .h5 {
         font-size: 18px;
     }
 
-    h6 {
+    h6,
+    .h6 {
         font-size: 16px;
+    }
+
+    .page-title {
+        margin-bottom: 40px;
     }
 
     .container {
@@ -300,6 +308,22 @@
         border-radius: 6px;
     }
 
+    .page-home {
+        .banner {
+            &-col {
+                &:first-child {
+                    display: flex;
+                    flex-direction: column-reverse;
+                    gap: 40px;
+                }
+            }
+        }
+
+        .banner-advantages {
+            margin-bottom: 0;
+        }
+    }
+
     .banner {
         padding-top: 20px;
         padding-bottom: 100px;
@@ -308,13 +332,13 @@
             flex-direction: column-reverse;
         }
 
-        &-col {
-            &:first-child {
-                display: flex;
-                flex-direction: column-reverse;
-                gap: 40px;
-            }
-        }
+        // &-col {
+        //     &:first-child {
+        //         display: flex;
+        //         flex-direction: column-reverse;
+        //         gap: 40px;
+        //     }
+        // }
 
         .banner-text {
             margin-bottom: 40px;
@@ -331,6 +355,10 @@
 
         +section {
             margin-top: 0;
+        }
+
+        .img-fluid {
+            border-radius: 12px;
         }
     }
 
@@ -378,12 +406,16 @@
 
     .banner-advantages {
         gap: 16px;
-        margin-bottom: 0;
+        margin-bottom: 40px;
     }
 
     .banner-advantages-item {
         font-size: 14px;
         gap: 16px;
+    }
+
+    .banner-link {
+        font-size: 16px;
     }
 
     .nice-select {
@@ -562,6 +594,67 @@
     .accordion-body {
         font-size: 16px;
         padding-bottom: 55px;
+    }
+
+
+    .page-main-services {
+        padding-top: 20px;
+    }
+
+    .services-list {
+        --services-list-gap: 20px;
+    }
+
+    .srvices-item {
+        border: 1px solid $stroke;
+        width: 100%;
+        max-width: 705px;
+        margin: 0 auto;
+        padding: 20px 24px 24px;
+
+        &:first-child {
+            flex-direction: column;
+        }
+
+        &__title {
+            font-size: 24px;
+            margin-bottom: 12px;
+        }
+
+        &__description {
+            margin-bottom: 20px;
+            font-size: 16px;
+        }
+
+        &__link {
+            margin-bottom: 20px;
+        }
+    }
+
+    .exchange-row {
+        flex-direction: column-reverse;
+        gap: 8px;
+        position: relative;
+        padding-bottom: 190px;
+
+        .form-exchange {
+            min-width: initial;
+            margin-left: initial;
+            width: 100%;
+            max-width: 705px;
+            align-items: flex-start;
+            position: static;
+
+            .btn {
+                position: absolute;
+                left: 20px;
+                bottom: 100px;
+                max-width: 705px;
+                width: calc(100% - 40px);
+                margin: 0;
+            }
+        }
+
     }
 
     .footer-logo {
