--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -13,37 +13,50 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
     color: $titles;
     font-weight: 600;
 }
 
-h1 {
+h1,
+.h1 {
     font-size: 58px;
     line-height: 1.2;
 }
 
-h2 {
+h2,
+.h2 {
     font-size: 48px;
     line-height: 1.25;
 }
 
-h3 {
+h3,
+.h3 {
     font-size: 36px;
     line-height: 1;
 }
 
-h4 {
+h4,
+.h4 {
     font-size: 32px;
     line-height: 1.3;
 }
 
-h5 {
+h5,
+.h5 {
     font-size: 24px;
     line-height: 1.5;
 }
 
-h6 {
+h6,
+.h6,
+legend {
     font-size: 20px;
     line-height: 1.7;
 }
@@ -62,8 +75,33 @@ section {
     padding-bottom: $section-padding;
 }
 
-.container {
-    max-width: 1464px;
+legend {
+    border-bottom: 1px solid #242424;
+    margin-bottom: 40px;
+    padding-bottom: 12px;
+}
+
+fieldset {
+    margin-bottom: 20px;
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.container,
+.page-title {
+    max-width: $container-width;
+}
+
+.page-title {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 60px;
+    padding-left: 18px;
+    padding-right: 18px;
+   @extend .h2;
 }
 
 .color-list {
@@ -343,7 +381,10 @@ section {
     overflow: auto;
 }
 
-
+.page-main-services,
+.page-faq {
+    padding-top: 40px;
+}
 
 
 
