--- a/dev/style.scss
+++ b/dev/style.scss
@@ -26,5 +26,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "sass/faq";
 @import "sass/review";
 @import "sass/questions";
+@import "sass/services";
+@import "sass/exchange-application";
 @import "sass/footer";
 @import "sass/media/media";
