--- a/dev/templates/footer-assets.html
+++ b/dev/templates/footer-assets.html
@@ -1,13 +1,3 @@
-
-
-
-
-
-
-
-
-
-
 <svg class="d-none">
     <symbol id="arrow-back" viewBox="0 0 18 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path d="M7.89098 15.3022L0.270597 7.68182L7.89098 0.0614339L9.36115 1.51527L4.25639 6.62003H17.0795V8.74361H4.25639L9.36115 13.8402L7.89098 15.3022Z" />
@@ -44,7 +34,7 @@
     <symbol id="icon-check" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path d="M4 11.1176L9.92593 17L20 7" stroke="#B1FF5C" stroke-width="3" />
     </symbol>
-    <symbol id="icon-arrow" viewBox="0 0 8 12"   xmlns="http://www.w3.org/2000/svg">
+    <symbol id="icon-arrow" viewBox="0 0 8 12" fill="none"  xmlns="http://www.w3.org/2000/svg">
         <path d="M1 1L6 6L1 11" stroke="currentColor" stroke-width="2" />
     </symbol>
 
