--- a/dev/templates/form-exchange_case2.html
+++ b/dev/templates/form-exchange_case2.html
@@ -1,4 +1,4 @@
-<form class="form-exchange">
+<div class="form-exchange">
     <div class="give">
         <label for="give-currency">віддаю</label>
         <div class="input-row">
@@ -56,4 +56,4 @@
         </li>       
     </ul>
     <button class="btn btn-primary btn-large">відправити заявку</button>
-</form>
+</div>
